--- a/order.html
+++ b/order.html
@@ -23,8 +23,8 @@
             <div class="details">
                 <div class="details-sub">
                     <h5>اتصل على ارقام التوصيل</h5>
-                    <h3><a href="tel:+964 7744888878" class="phone">07744888878</a></h3>
-                    <h3><a href="tel:+964 7844888878" class="phone">07844888878</a></h3>
+                    <h3><a href="tel:+964 7700000000" class="phone">07700000000</a></h3>
+                    <h3><a href="tel:+964 7811111111" class="phone">07111111111</a></h3>
                 </div>
             </div>
         </div>
@@ -34,14 +34,14 @@
             <div class="details">
                 <div class="details-sub">
                     <h5>تابعنا على</h5>
-                    <!-- <h3><a href="https://www.instagram.com/" class="phone"><i class="ri-instagram-line"></i> الانستكرام</a></h3> -->
-                    <h3><a href="https://www.facebook.com/profile.php?id=61557985168596&mibextid=LQQJ4d" class="phone"><i class="ri-facebook-circle-line"></i> الفيس بوك</a></h3>
-                    <!-- <h3><a href="https://web.telegram.org/a/" class="phone"><i class="ri-telegram-line"></i> التليكرام</a></h3> -->
+                    <h3><a href="https://www.instagram.com/" class="phone"><i class="ri-instagram-line"></i> الانستكرام</a></h3>
+                    <h3><a href="https://www.facebook.com/" class="phone"><i class="ri-facebook-circle-line"></i> الفيس بوك</a></h3>
+                    <h3><a href="https://web.telegram.org/a/" class="phone"><i class="ri-telegram-line"></i> التليكرام</a></h3>
                 </div>
             </div>
         </div>
 
-        <!-- <div class="food-items">
+        <div class="food-items">
             <div class="back"></div>
             <div class="details">
                 <div class="details-sub">
@@ -49,7 +49,7 @@
                     <h3><a href="tel:+964 7721955690" class="phone"><i class="ri-whatsapp-line"></i> واتساب المطور</a></h3>
                 </div>
             </div>
-        </div> -->
+        </div>
 
         <div class="food-items">
             <div class="back"></div>
