--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
     <div class="menu">
         <div class="heading">
-            <h1>كاهيتو</h1>
-            <h3>&mdash; KAHETO &mdash;</h3>
+            <h1>واتساب</h1>
+            <h3>&mdash; --- &mdash;</h3>
         </div>
 
 
-        <div class="food-items">
+        <!-- <div class="food-items">
             <img src="./images2/kaheSection.jpg">
             <div class="details">
                 <div class="details-sub">
@@ -126,7 +126,7 @@
                         <button>قائمة المشروبات</button>
                     </a>
             </div>
-        </div>
+        </div> -->
         
 
 
