--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h3>&mdash; --- &mdash;</h3>
         </div>
 
-        <h1>07721955690</h1>
+        <h1 style="align-items: center;">07721955690</h1>
 
 
         <!-- <div class="food-items">
