--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
     <div class="menu">
         <div class="heading">
-            <h1>واتساب</h1>
-            <h3>&mdash; --- &mdash;</h3>
+            <h1>كاهيتو مطعم</h1>
+            <h3>&mdash; MENU &mdash;</h3>
         </div>
 
 
-        <!-- <div class="food-items">
+        <div class="food-items">
             <img src="./images2/kaheSection.jpg">
             <div class="details">
                 <div class="details-sub">
@@ -126,12 +126,12 @@
                         <button>قائمة المشروبات</button>
                     </a>
             </div>
-        </div> -->
+        </div>
         
 
 
 
-        <!-- <div class="food-items">
+        <div class="food-items">
             <div class="back"></div>
             <div class="details">
                 <div class="details-sub">
@@ -139,7 +139,7 @@
                     <h3><a href="index.html" class="phone" style="color: #e84343;">العودة للقائمة الرئيسية</a></h3>
                 </div>
             </div>
-        </div> -->
+        </div>
 
 
 
